--- a/src/app/Modules/Home/Templates/LoadPostTemplate.html
+++ b/src/app/Modules/Home/Templates/LoadPostTemplate.html
@@ -1,5 +1,7 @@
 <div>
-    <div class="load_more_container">
-        <button>Load more</button>
+    <div class="load_more_container text-center">
+        <div class="col-lg-4 col-md-4 col-xs-8 col-lg-offset-4 col-md-offset-4 col-xs-offset-2">
+            <button class="btn" style="width: 100%;">Load more</button>
+        </div>
     </div>
 </div>
