Change text Add credits header Add styles Change header image

--- a/src/app/Modules/Home/Templates/NoMorePostsTemplate.html
+++ b/src/app/Modules/Home/Templates/NoMorePostsTemplate.html
@@ -1,5 +1,5 @@
 <div>
     <div class="no_more_posts_container text-center">
-        <h3>No hay más posts que mostrar</h3>
+        <h3>There are not more posts</h3>
     </div>
 </div>
